fix ts oc nnb on mobile view by hiding lvl column

--- a/css/factions/factions.css
+++ b/css/factions/factions.css
@@ -12,6 +12,23 @@
   }
 }
 
+@media screen and (max-width: 600px) {
+  #ts .plans-list .item>li.nnb, #ts .plan-list-scrollbar .title>li.nnb {
+    width: 40px !important;
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+
+  #ts .plans-list .item>li.level, #ts .plan-list-scrollbar .title>li.level {
+    width: 25px !important;
+    display: none;
+  }
+
+  #ts .plans-list .item>li.offences, #ts .plan-list-scrollbar .title>li.offences {
+    width: 60px !important;
+  }
+}
+
 #ts .plans-list .item>li.nnb, #ts .plan-list-scrollbar .title>li.nnb {
   width: 60px;
 }
@@ -63,6 +80,10 @@
 
 #tornstats-roster a {
   text-decoration: none;
+}
+
+#ts .plans-list .item>li.nnb, #ts .plan-list-scrollbar .title>li.nnb {
+  text-align: center;
 }
 
 @media screen and (max-width: 600px) {
